Aggiornamento dei File HTML e CSS (Correzione sull'Immagine)

--- a/File.html
+++ b/File.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title>SIW-HW2-2022</title>
+    <link rel="stylesheet" href="file.css" />
   </head>
   
   <body>
     <h1>Paolo Merialdo</h1>
-    <img src = "http://merialdo.dia.uniroma3.it/paolo-merialdo.jpg">
+    <div class="immagine">
+      <img src = "http://merialdo.dia.uniroma3.it/paolo-merialdo.jpg", width="280">
+    </div>
       
     <div id="infopersonali">
       <p class="elemento">
